--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,5 +110,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias=".75" />
 
+    <Button
+        android:id="@+id/changeQuestions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/change_questions"
+        android:textAllCaps="true"
+        android:textColor="#318214"
+        android:visibility="visible"
+        app:layout_constraintVertical_bias=".9"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
